# support-quality-intelligence-backend

./: .gitignore  Dockerfile  PRODUCTION_ARCHITECTURE.md  README.md  check_database.py  create_tables.py  docker-compose.yml  main.py  monitor_test_results.py  optimize_token_longevity.py  pyproject.toml  refresh_gmail_token.py  refresh_token.py  requirements.txt  send_test_emails.py  test_daily_reports.py  test_gmail_access.py  test_rag_pipeline.py
app/: main.py
app/api/: __init__.py  agent_routes.py  alert_routes.py  classification_routes.py  rag_routes.py
app/api/endpoints/: __init__.py  health.py  verification.py
app/api/models/: __init__.py  request_models.py  response_models.py
app/config/: __init__.py  logging.py  settings.py
app/core/: connections.py
app/db/: session.py
app/db/models/: __init__.py  alerts.py  audit_logs.py  daily_reports.py  emails.py  (+5 more)
app/routes/: classification.py  dashboard.py  email.py  reports.py
app/services/: token_manager.py
app/utils/: drive_client.py  state.py
app/webhook/: gmail.py  google_drive.py  router.py
data/: assessment-policies.md  course-catalog-data.md  placement-assistance-data.md
docs/: FRONTEND_API_DOCUMENTATION.md
scripts/: README.md  add_subject_body_fields.py  create_database.py  embed_data.py  init_production_db.py  inspect_data.py  migrate_alerts_table.py  setup_gmail_auth.py  setup_qdrant.py  test_connections.py  validate_setup.py  view_database.py
tests/: README.md
tests/docs/: comprehensive_test_runner.py  run_real_tests.py  testcase
tests/integration/: README.md  comprehensive_test_suite.py
(+38 files in other folders)
