[project]
name = "support-quality-intelligence-backend"
version = "0.1.0"
description = "Support Quality Intelligence Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "python-dotenv",
]
