[project]
name = "support-quality-intelligence-backend"
version = "0.1.0"
description = "Support Quality Intelligence Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=5.5.2",
    "fastapi[standard]>=0.116.1",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "joblib>=1.5.1",
    "langgraph>=0.6.5",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
